cleanup up task and fix itemcount for products

--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -51,7 +51,7 @@
           <div class="d-flex justify-content-between">
             <div class="align-content-start w-50 mr-3"><input
               class="form-control form-control-lg"
-              placeholder="1" type="number" value="1">
+              placeholder="1" type="number" value="1" [(ngModel)]="product.itemcount">
             </div>
             <div class="align-content-start w-50">
               <button class="btn btn-primary btn-block" (click)="addToBasket(product)">in Warenkorb</button>
