--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -1,6 +1,3 @@
-
-
-
 <div *ngIf="selectedProduct$ | async as product; else loading">
   <div class="product-wrapper section-gap">
     <div class="container-fluid">
@@ -51,11 +48,10 @@
           <div class="d-flex justify-content-between">
             <div class="align-content-start w-50 mr-3"><input
               class="form-control form-control-lg"
-              placeholder="1" type="number" value="1" [(ngModel)]="product.itemcount">
+              type="number" value="1" [(ngModel)]="product.itemcount">
             </div>
             <div class="align-content-start w-50">
               <button class="btn btn-primary btn-block" (click)="addToBasket(product)">in Warenkorb</button>
-              <!--<a class="btn btn-mabr-primary" (click)="addToBasket(product)">in Warenkorb</a>-->
             </div>
           </div>
         </div>
@@ -86,7 +82,6 @@
 
 <div class="col-12">
   <button class="btn btn btn-primary" appBackButton>Zurück</button>
-  <!--<button class="btn btn-mabr-primary" appBackButton>Zurück</button>-->
 </div>
 
 <ng-template #loading>
