--- a/src/app/styles/_override_bootstrap_variables.scss
+++ b/src/app/styles/_override_bootstrap_variables.scss
@@ -5,5 +5,50 @@ $navbar-nav-link-padding-x: 1.25rem;
 
 $hr-border-color: #fff;
 
+$theme-colors: (
+  "primary": grey,
+  "danger": #ff4136
+);
 
 
+// Button Style start
+$mabr-btn-bg-color: grey;
+$mabr-btn-color: #FFF;
+$mabr-btn-color-active: lighten($mabr-btn-bg-color, 15%);
+$mabr-btn-border-radius: 5px;
+
+.btn {
+  padding: 12px 24px;
+  border: 0 none;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  border-radius: $mabr-btn-border-radius;
+}
+
+.btn:focus, .btn:active:focus, .btn.active:focus {
+  outline: 0 none;
+}
+
+.btn-primary {
+  background: $mabr-btn-bg-color;
+  color: $mabr-btn-color;
+}
+
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
+  background: $mabr-btn-color-active;
+}
+
+.btn-primary:active, .btn-primary.active {
+  background: $mabr-btn-color-active;
+  box-shadow: none;
+}
+// Button Style end
+
+
+// Global Variables
+//$c-bg-header: #72A1A7;
+//$c-bg-footer: #72A1A7;
+//$c-font-header: rgba(226, 220, 220, 0.5);
+//$c-font-header: rgba(226, 220, 220, 0.5);
+//$c-bg-login-btn: #D4AF7A;
