--- a/src/app/styles/_shared.scss
+++ b/src/app/styles/_shared.scss
@@ -3,7 +3,6 @@
 @import '~bootstrap/scss/variables';
 @import '~bootstrap/scss/mixins';
 @import 'variables';
-@import 'mixins';
-@import 'buttons';
-@import 'custom_mabr';
-@import "custom_reset";
+//@import 'mixins';
+//@import 'buttons';
+
