product detail tooltip button, all console logs removed

--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -3,8 +3,8 @@
 <div class="container-fluid">
   <div class="row">
     <nav class="product-navi">
-      <button routerLink="grid" class="btn btn-primary" role="button" routerLinkActive="active"><i class="fa fa-th" aria-hidden="true"></i></button>
-      <button routerLink="list" class="btn btn-primary" role="button" routerLinkActive="active"><i class="fa fa-list" aria-hidden="true"></i></button>
+      <button routerLink="grid" class="btn btn-primary" role="button" routerLinkActive="active" title="Grid Ansicht"><i class="fa fa-th" aria-hidden="true"></i></button>
+      <button routerLink="list" class="btn btn-primary" role="button" routerLinkActive="active" title="Listen Ansicht"><i class="fa fa-list" aria-hidden="true"></i></button>
     </nav>
   </div>
 
