--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,8 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
 
-  <a class="navbar-brand" [routerLink]="['']">MABRWEB</a>
-
-
+  <a class="navbar-brand" [routerLink]="['']">MABRSHOP</a>
 
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
 
@@ -31,7 +29,6 @@
 
   <app-header-search></app-header-search>
 
-  <!-- todo: Flyout CSS in Flyout Komponente anpassen, dann hier aktivieren, sollte gleich links von Hamburber und bei grossen Screens rechts von Login Register sein? -->
   <app-header-orderflyout></app-header-orderflyout>
 
   <span class="burgerMenu" (click)="OpenMenuCanvas()">
