--- a/src/app/checkout/checkout-customerdata/checkout-customerdata.component.html
+++ b/src/app/checkout/checkout-customerdata/checkout-customerdata.component.html
@@ -72,7 +72,7 @@
     <div class="form-check">
       <input type="checkbox"
              class="form-check-input"
-             id="shipqingEqualsBillingAddress" [(ngModel)]="shipqingEqualsBillingAddress" [ngModelOptions]="{standalone: true}" (change)="setValidation($event)">
+             id="shipqingEqualsBillingAddress" [(ngModel)]="shipqingEqualsBillingAddress" [ngModelOptions]="{standalone: true}" (change)="setValidation()">
       <label class="form-check-label" for="shipqingEqualsBillingAddress">Lieferadresse gleich wie
         Rechnungsadresse</label>
     </div>
