--- a/src/app/order/order.component.scss
+++ b/src/app/order/order.component.scss
@@ -6,11 +6,65 @@
 .text-truncate {
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap;
+  white-space: normal;
   margin-left: 10px;
 }
 
+
+.table {
+  table-layout: fixed;
+}
+
+
+
+
+
+th.action{
+  width: 7%;
+}
+
+th.orderinput,
+td.orderinput {
+  width: 15%;
+}
+
+th.discount{
+  width: 8%;
+}
+
+th.price{
+  width: 10%;
+}
+
+
+th.product{
+  width: 40%;
+}
+
+
+button.btn {
+  padding: 0.375rem 0.75rem;
+  border: 1px solid #6c757d;
+}
+
+@media screen and (max-width: 990px) {
+
+  th.orderinput,
+  td.orderinput {
+    width: 20%;
+  }
+
+}
+
+
+
 @media screen and (max-width: 768px) {
+
+  th.orderinput,
+  td.orderinput {
+    width: 100%;
+  }
+
   tbody, thead {
     float: left;
     width: 100%;}
