order button fix orderflyout

--- a/src/app/core/header/header-orderflyout/header-orderflyout.component.html
+++ b/src/app/core/header/header-orderflyout/header-orderflyout.component.html
@@ -45,7 +45,7 @@
             </tbody>
           </table>
 
-          <a [routerLink]="['bestellung']" (click)="closeFlyout()" id="clear-cart" class="button u-full-width btn btn-outline-primary mt-2">Bestellen</a>
+          <button [routerLink]="['bestellung']" (click)="closeFlyout()" id="clear-cart" class="button btn btn-primary mt-2">Bestellen</button>
 
         </ng-template>
 
