admin area styling bootstrap

--- a/src/app/admin/admin-product-add/admin-product-add.component.html
+++ b/src/app/admin/admin-product-add/admin-product-add.component.html
@@ -1,3 +1,5 @@
+<h3>Produkt erfassen</h3>
+
 <form (ngSubmit)="onSubmit()">
   <input type="hidden" id="createdDate" [(ngModel)]="product.createdDate" name="createdDate">
   <div class="ui-inputgroup">
