--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -1,4 +1,4 @@
-<app-page-title title="User Liste" [children]="[{title: 'User Liste'}]"></app-page-title>
+<!--<app-page-title title="User Liste" [children]="[{title: 'User Liste'}]"></app-page-title>-->
 <app-user-list-item *ngFor="let user of users$ | async | paginate: { itemsPerPage: itemsPerPage, currentPage: p }"
                     [user]="user"></app-user-list-item>
 
