styles in Order/Checkout Components changed

--- a/src/app/checkout/checkout-customerdata/checkout-customerdata.component.html
+++ b/src/app/checkout/checkout-customerdata/checkout-customerdata.component.html
@@ -146,8 +146,8 @@
 
     <div class="row">
       <div class="col-12">
-      <button type="button" class="btn btn-primary float-md-left" (click)="goBack()">zurück</button>
-      <button [disabled]="!formIsValid" type="submit" class="btn btn-primary float-md-right">weiter zur Versandart</button>
+      <button type="button" class="checkoutaction btn btn-primary float-left  mb-2" (click)="goBack()">zurück</button>
+      <button [disabled]="!formIsValid" type="submit" class="checkoutaction btn btn-primary float-right">weiter zur Versandart</button>
       </div>
     </div>
 
