--- a/src/app/checkout/checkout-payment/checkout-payment.component.html
+++ b/src/app/checkout/checkout-payment/checkout-payment.component.html
@@ -22,8 +22,8 @@
 
     <div class="row">
       <div class="col-12">
-        <button type="button" class="btn btn-primary float-left" (click)="goBack()">zurück</button>
-        <button type="submit" class="btn btn-primary float-right">Bestellübersicht</button>
+        <button type="button" class="checkoutaction btn btn-primary float-left mb-2" (click)="goBack()">zurück</button>
+        <button type="submit" class="checkoutaction btn btn-primary float-right">Bestellübersicht</button>
       </div>
     </div>
 
