--- a/src/app/checkout/checkout-thx/checkout-thx.component.html
+++ b/src/app/checkout/checkout-thx/checkout-thx.component.html
@@ -9,8 +9,8 @@
   <br>
 
   <div class="row">
-    <div class="offset-8">
-      <button type="button" class="btn btn-primary" (click)="onBackToShopping()">zum Shop</button>
+  <div class="col-12">
+      <button type="button" class="checkoutaction btn btn-primary float-right" (click)="onBackToShopping()">zum Shop</button>
     </div>
   </div>
 
