--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -25,8 +25,12 @@ $spinner-color: $grey;
 
 
 //Theme Colors https://color.adobe.com/de/webshop-color-theme-11628321/edit/?copy=true
-$theme-color1: #A3D9E9;
+$theme-color1: #6166C5;
 $theme-color2: #70A1A8;
-$theme-color3: #DFBA49;
+$theme-color3: #6BBA49; // grün
 $theme-color4: #FD933A;
 $theme-color5: #FC6C48;
+
+$grey-button: grey;
+
+
