--- a/src/app/checkout/checkout-overview/styles/checkout-overview.component.scss
+++ b/src/app/checkout/checkout-overview/styles/checkout-overview.component.scss
@@ -1,1 +1,110 @@
 @import '../../../styles/_shared';
+
+
+tr.scarttotal {
+  border-bottom: 1px solid $grey-button;
+  font-weight: 600;
+}
+
+table.table-striped > thead > tr > th{
+  border-top:1px solid $grey-button;
+  border-bottom:1px solid $grey-button;
+}
+
+.img-thumbnail {
+  max-width: 100px;
+  height: auto;
+}
+
+.text-truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
+  margin-left: 10px;
+}
+
+
+.table {
+  table-layout: fixed;
+}
+
+
+
+th.action{
+  width: 7%;
+}
+
+th.orderinput,
+td.orderinput {
+  width: 10%;
+}
+
+th.discount{
+  width: 8%;
+}
+
+th.price{
+  width: 15%;
+}
+
+
+th.product{
+  width: 40%;
+}
+
+
+button.btn {
+  padding: 0.375rem 0.75rem;
+  border: 1px solid #6c757d;
+}
+
+@media screen and (max-width: 990px) {
+
+  th.orderinput,
+  td.orderinput {
+    width: 20%;
+  }
+
+}
+
+
+
+@media screen and (max-width: 768px) {
+
+  th.orderinput,
+  td.orderinput {
+    width: 100%;
+  }
+
+  tbody, thead {
+    float: left;
+    width: 100%;}
+
+
+  .order {
+    td,th { display: block }
+    thead,.no-responsive { display: none }
+  }
+
+  .table td:before {
+    content: attr(data-title)" ";
+    float: left;
+  }
+  .table tr{
+    border: 1px solid #dee2e6;
+    width: 100%;
+    display: block;
+  }
+  .table td.text{
+    height: 35px;
+    padding: 0.50rem;
+  }
+
+  .table p {
+    margin-bottom: 0;
+  }
+
+  .table .btn-sm, .btn-group-sm > .btn {
+    width: 100%;
+  }
+}
