--- a/src/app/checkout/checkout-shipment/checkout-shipment.component.html
+++ b/src/app/checkout/checkout-shipment/checkout-shipment.component.html
@@ -1,41 +1,36 @@
+<h1>Versandart</h1>
 
-  <h1>Versandart</h1>
+<form [formGroup]="ShipmentForm" (ngSubmit)="onSubmit()">
 
-  <form [formGroup]="ShipmentForm" (ngSubmit)="onSubmit()">
-
-
-
-    <table class="table table-striped">
-      <tbody>
-      <tr>
-        <td><input type="radio" value="express" name="shippingMethod" formControlName="shippingMethod"></td>
-        <td>Express Priority</td>
-        <td>CHF 10.00</td>
-      </tr>
-      <tr>
-        <td>  <input type="radio" value="fedex" name="shippingMethod"  formControlName="shippingMethod"></td>
-        <td>FedEx</td>
-        <td>CHF 15.00</td>
-      </tr>
-      <tr>
-        <td> <input type="radio" value="normal" name="shippingMethod"  formControlName="shippingMethod"> </td>
-        <td>  Normal</td>
-        <td>CHF 5.00</td>
-      </tr>
-      </tbody>
-    </table>
+  <table class="table table-striped">
+    <tbody>
+    <tr>
+      <td><input type="radio" value="express" name="shippingMethod" formControlName="shippingMethod"></td>
+      <td>Express Priority</td>
+      <td>CHF 10.00</td>
+    </tr>
+    <tr>
+      <td><input type="radio" value="fedex" name="shippingMethod" formControlName="shippingMethod"></td>
+      <td>FedEx</td>
+      <td>CHF 15.00</td>
+    </tr>
+    <tr>
+      <td><input type="radio" value="normal" name="shippingMethod" formControlName="shippingMethod"></td>
+      <td> Normal</td>
+      <td>CHF 5.00</td>
+    </tr>
+    </tbody>
+  </table>
 
 
-
-    <div class="row">
-      <div class="col-12">
-    <button type="button" class="btn btn-primary pull-left" (click)="goBack()">zurück</button>
-    <button type="submit" class="btn btn-primary pull-right">Zahlart wählen</button>
-      </div>
+  <div class="row">
+    <div class="col-12">
+      <button type="button" class="checkoutaction btn btn-primary float-left mb-2" (click)="goBack()">zurück</button>
+      <button type="submit" class="checkoutaction btn btn-primary float-right">Zahlart wählen</button>
     </div>
+  </div>
 
 
-
-  </form>
+</form>
 
 
