styles in Checkout/Login Component changed

--- a/src/app/checkout/checkout-login/styles/checkout-login.component.scss
+++ b/src/app/checkout/checkout-login/styles/checkout-login.component.scss
@@ -1,1 +1,19 @@
 @import '../../../styles/_shared';
+
+a:hover{
+
+  text-decoration: none;
+
+  .card-header {
+    background: $theme-color3;
+  }
+
+}
+
+
+@media screen and (max-width: 768px) {
+
+  h4, .h4 {
+    font-size: 1rem;
+  }
+}
