--- a/src/app/checkout/checkout-login/checkout-login.component.html
+++ b/src/app/checkout/checkout-login/checkout-login.component.html
@@ -1,19 +1,56 @@
 <div class="container">
 
 
-  <h1>1.) Neu hier? </h1>
-  <a [routerLink]="['/user-login-register-slide']" [queryParams]="{orderstep: '1', register: '1'}">
-    <p>Hier können Sie sich registrieren...</p>
-  </a>
-  <br>
-  <br>
-  <h1>2.) Sie haben bereits ein Konto?</h1>
-  <a [routerLink]="['/user-login-register-slide']" [queryParams]="{orderstep: '1', login: '1'}">
-    <p>Hier können Sie sich einloggen...</p>
-  </a>
-  <br>
-  <br>
-  <h1>3.) Bestellen ohne Registrierung</h1>
-  <a [routerLink]="['../checkout/customerdata']">ohne Konto bestellen</a>
+
+  <div class="card-deck mt-5">
+
+    <div class="card">
+      <a [routerLink]="['/user-login-register-slide']" [queryParams]="{orderstep: '1', register: '1'}">
+      <div class="card-header text-center ">
+        <h4 class="card-title">Registration</h4>
+        <h2><i class="fa fa-user fa-3x"></i></h2>
+      </div>
+      </a>
+
+      <div class="card-body">
+        <h5 class="card-title">Neu hier?</h5>
+        <p class="card-text">Hier können Sie sich registrieren und ein Benutzerkonto eröffnen. Damit werden Ihre Angaben gespeichert und bei jedem Einkauf
+        automatisch wieder geladen</p>
+      </div>
+
+    </div>
+
+
+    <div class="card">
+      <a [routerLink]="['/user-login-register-slide']" [queryParams]="{orderstep: '1', login: '1'}">
+        <div class="card-header text-center ">
+          <h4 class="card-title">Login</h4>
+          <h2><i class="fa fa-sign-in fa-3x"></i></h2>
+        </div>
+      </a>
+      <div class="card-body">
+        <h5 class="card-title">Sie haben bereits ein Konto?</h5>
+        <p class="card-text">Hier können Sie sich mit Ihren Zugangsdaten einloggen.</p>
+      </div>
+    </div>
+
+
+    <div class="card">
+
+      <a [routerLink]="['../checkout/customerdata']">
+        <div class="card-header text-center ">
+          <h4 class="card-title">Bestellung</h4>
+          <h2><i class="fa fa-shopping-cart fa-3x"></i></h2>
+        </div>
+      </a>
+
+
+      <div class="card-body">
+        <h5 class="card-title">Bestellen ohne Registrierung</h5>
+        <p class="card-text">Sie können Ihre Bestellung ohne ein Benutzerkonto ausfürhen.</p>
+      </div>
+
+    </div>
+  </div>
 
 </div>
