--- a/src/app/order/style/order.component.scss
+++ b/src/app/order/style/order.component.scss
@@ -52,9 +52,12 @@ th.product{
 }
 
 
+button.btn:not(.btn-danger)  {
+  border: 1px solid #6c757d;
+}
+
 button.btn {
   padding: 0.375rem 0.75rem;
-  border: 1px solid #6c757d;
 }
 
 @media screen and (max-width: 990px) {
