--- a/src/app/core/home/styles/home.component.scss
+++ b/src/app/core/home/styles/home.component.scss
@@ -1,11 +1,14 @@
 @import '../../../styles/_shared';
 
-
-// full size bootstrap container with no padding for homepage start
-:host {
+// home slider no padding
+app-home {
   > .container-fluid {
     padding-left: 0;
     padding-right: 0;
   }
 }
-// full size bootstrap container with no padding for homepage end
+
+// home boxen spacing
+.col-6.col-sm-12.col-md-6 {
+  margin-bottom: 20px;
+}
