--- a/src/app/styles/_override_bootstrap_variables.scss
+++ b/src/app/styles/_override_bootstrap_variables.scss
@@ -11,6 +11,17 @@ $theme-colors: (
 );
 
 
+body {
+  a {
+    color: #212529;
+  }
+  a:hover {
+    text-decoration: none;
+    color: grey;
+  }
+}
+
+
 // Button Style start
 $mabr-btn-bg-color: grey;
 $mabr-btn-color: #FFF;
