--- a/src/app/admin/admin-product-add/admin-product-add.component.html
+++ b/src/app/admin/admin-product-add/admin-product-add.component.html
@@ -1,56 +1,61 @@
-<h3>Produkt erfassen</h3>
+<app-page-title title="Produkt hinzufügen" [children]="[{title: 'Produkt hinzufügen'}]"></app-page-title>
+<div class="container">
+  <form (ngSubmit)="onSubmit()">
+    <input type="hidden" id="createdDate" [(ngModel)]="product.createdDate" name="createdDate">
+    <div class="ui-inputgroup">
+      <input type="text" pInputText placeholder="Name" required [(ngModel)]="product.name" name="name">
+    </div>
+    <br>
 
-<form (ngSubmit)="onSubmit()">
-  <input type="hidden" id="createdDate" [(ngModel)]="product.createdDate" name="createdDate">
-  <div class="ui-inputgroup">
-    <input type="text" pInputText placeholder="Name" required [(ngModel)]="product.name" name="name">
-  </div>
-  <br>
+    <div class="ui-inputgroup">
+      <input type="text" pInputText placeholder="Beschreibung" required [(ngModel)]="product.description"
+             name="beschreibung">
+    </div>
+    <br>
 
-  <div class="ui-inputgroup">
-    <input type="text" pInputText placeholder="Beschreibung" required [(ngModel)]="product.description"
-           name="beschreibung">
-  </div>
-  <br>
+    <div class="ui-inputgroup">
+      <input type="number" placeholder="Preis" required [(ngModel)]="product.price" name="price">
+    </div>
+    <br>
+    <br>
 
-  <div class="ui-inputgroup">
-    <input type="number" placeholder="Preis" required [(ngModel)]="product.price" name="price">
-  </div>
-  <br>
-  <br>
+    <p>Bildname</p>
+    <p-fileUpload
+      name="myfile[]"
+      chooseLabel="Bild Upload"
+      cancelLabel="Abbrechen"
+      type="file"
+      (onSelect)="onFileSelection($event)"
+      [showUploadButton]="false"
+      accept="image/*">
+    </p-fileUpload>
 
-  <p>Bildname</p>
-  <p-fileUpload
-    name="myfile[]"
-    chooseLabel="Bild Upload"
-    cancelLabel="Abbrechen"
-    type="file"
-    (onSelect)="onFileSelection($event)"
-    [showUploadButton]="false"
-    accept="image/*">
-  </p-fileUpload>
+    <br>
+    <div *ngIf="(categories$ | async) as Cat">
+      <p-dropdown [options]="Cat" [(ngModel)]="selectedCategory" name="selectedCategory"
+                  placeholder="Wähle eine Kategorie" optionLabel="name" [showClear]="true" filter="true"></p-dropdown>
+      <p>Gewählte Kategorie: {{selectedCategory ? selectedCategory.name : 'none'}}</p>
+    </div>
 
-  <br>
-  <div *ngIf="(categories$ | async) as Cat">
-    <p-dropdown [options]="Cat" [(ngModel)]="selectedCategory" name="selectedCategory"
-                placeholder="Wähle eine Kategorie" optionLabel="name" [showClear]="true" filter="true"></p-dropdown>
-    <p>Gewählte Kategorie: {{selectedCategory ? selectedCategory.name : 'none'}}</p>
-  </div>
+    <p-checkbox binary="true" value="discount" label="Aktion" [(ngModel)]="discount" name="discount"></p-checkbox>
+    <br>
 
-  <p-checkbox binary="true" value="discount" label="Aktion" [(ngModel)]="discount" name="discount"></p-checkbox>
-  <br>
+    <div class="ui-inputgroup" *ngIf="discount">
+      <input type="number" placeholder="1" required [(ngModel)]="product.discountFactor" name="discountFactor"> (Rabatt
+      Default 1=kein Rabatt, Bereich: 0.00-1)
+    </div>
 
-  <div class="ui-inputgroup" *ngIf="discount">
-    <input type="number" placeholder="1" required [(ngModel)]="product.discountFactor" name="discountFactor"> (Rabatt
-    Default 1=kein Rabatt, Bereich: 0.00-1)
-  </div>
+    <p-checkbox binary="true" value="newProduct" label="Neuheit" [(ngModel)]="newProduct" name="newProduct"></p-checkbox>
+    <br>
+    <p-checkbox binary="true" value="bestRated" label="Beste Bewertung" [(ngModel)]="bestRated"
+                name="bestRated"></p-checkbox>
+    <br><br>
 
-  <p-checkbox binary="true" value="newProduct" label="Neuheit" [(ngModel)]="newProduct" name="newProduct"></p-checkbox>
-  <br>
-  <p-checkbox binary="true" value="bestRated" label="Beste Bewertung" [(ngModel)]="bestRated"
-              name="bestRated"></p-checkbox>
-  <br><br>
+    <button type="submit" class="btn btn-secondary">Eingabe bestätigen</button>
+  </form>
 
-  <button type="submit" class="btn btn-secondary">Eingabe bestätigen</button>
-</form>
+
+  <a appBackButton class="mt-4 d-block pointer">Zurück zum Dashboard</a>
+</div>
+
 
