--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,68 +1,15 @@
-<app-page-title title="Admin Dashboard" [children]="[{title: 'Admin Dashboard'}]"></app-page-title>
-<div class="container-fluid" id="admin">
-
-  <div class="container">
-    <div class="row admin-icons">
-
-      <div class="col-md-3">
-        <a routerLink="add">
-          <div class="card text-center bg-primary text-white mb-3">
-            <div class="card-body">
-              <h6>Artikel Hinzufügen</h6>
-              <h4 class="display-4">
-                <i class="fa fa-cog"></i>
-              </h4>
-            </div>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-md-3">
-        <a routerLink="add-category">
-          <div class="card text-center bg-primary text-white mb-3">
-            <div class="card-body">
-              <h6>Kategorien Verwalten</h6>
-              <h4 class="display-4">
-                <i class="fa fa-folder"></i>
-              </h4>
-            </div>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-md-3">
-        <a routerLink="users/list">
-          <div class="card text-center bg-primary text-white mb-3">
-              <div class="card-body">
-                <h6>Benutzer Verwalten</h6>
-                <h4 class="display-4">
-                  <i class="fa fa-users"></i>
-                </h4>
-              </div>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-md-3">
-        <div class="card text-center bg-primary text-white mb-3">
-          <div class="card-body">
-            <h6>Orders Verwalten</h6>
-            <h4 class="display-4">
-              <i class="fa fa-shopping-basket"></i>
-            </h4>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-
-</div>
+<!--<app-page-title title="Admin Dashboard" [children]="[{title: 'Admin Dashboard'}]"></app-page-title>-->
 
 
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
+<router-outlet></router-outlet>
+
+
+
+
+<!--<div class="container-fluid" id="admin">-->
+
+<!--</div>-->
+
 
 
 
