--- a/src/app/admin/admin-home/admin-home.component.html
+++ b/src/app/admin/admin-home/admin-home.component.html
@@ -1,3 +1,56 @@
-<p>
-  admin-home works!
-</p>
+<app-page-title title="Admin Dashboard" [children]="[{title: 'Admin Dashboard'}]"></app-page-title>
+<div class="container">
+  <div class="row admin-icons">
+
+    <div class="col-md-3">
+      <a routerLink="/admin/add">
+        <div class="card text-center bg-primary text-white mb-3">
+          <div class="card-body">
+            <h6>Produkt hinzufügen</h6>
+            <h4 class="display-4">
+              <i class="fa fa-cog"></i>
+            </h4>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-md-3">
+      <a routerLink="/admin/add-category">
+        <div class="card text-center bg-primary text-white mb-3">
+          <div class="card-body">
+            <h6>Kategorien hinzufügen</h6>
+            <h4 class="display-4">
+              <i class="fa fa-folder"></i>
+            </h4>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-md-3">
+      <a routerLink="/users/list">
+        <div class="card text-center bg-primary text-white mb-3">
+          <div class="card-body">
+            <h6>Benutzer verwalten</h6>
+            <h4 class="display-4">
+              <i class="fa fa-users"></i>
+            </h4>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-md-3">
+      <div class="card text-center bg-primary text-white mb-3">
+        <div class="card-body">
+          <h6>Bestellungen verwalten</h6>
+          <h4 class="display-4">
+            <i class="fa fa-shopping-basket"></i>
+          </h4>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
